# newsletter-service

./: .gitignore  Cargo.toml  README.md  eslint.config.js  jest.config.mjs  openapi.yaml  package-lock.json  package.json  publicapi.yaml  template.yaml
__mocks__/: hbsMock.mjs
__tests__/: add-subscriber.test.mjs  analytics-report-template.test.mjs  billing-types.test.mjs  bootstrap-verification-template.test.mjs  brand-photo-management.test.mjs  build-report-data.test.mjs  check-sender-status-automatically.test.mjs  clean-bounced-subscribers.test.mjs  cognito-post-confirmation.test.mjs  cognito-pre-token-generation.test.mjs  compile-report.test.mjs  create-checkout-session.test.mjs  create-customer-portal-session.test.mjs  create-sender.test.mjs  decode-api-key.test.mjs  delete-sender.test.mjs  email-renderer.test.mjs  enhanced-template-builder.test.mjs  evaluate-ab-winner.test.mjs  eventbridge-monitoring.test.mjs  generate-insights.test.mjs  get-domain-verification.test.mjs  get-profile.test.mjs  get-sender-status.test.mjs  get-senders.test.mjs  get-snippet-usage.test.mjs  get-subscriber-stats.test.mjs  get-subscription-status.test.mjs  get-user-context.test.mjs  handle-email-status.test.mjs  handle-ses-event.test.mjs  interest-assembly.test.mjs  jwt-claims-refresh.test.mjs  lambda-authorizer.test.mjs  manage-api-keys.test.mjs  manage-user-groups.test.mjs  manual-unsubscribe.test.mjs  preview-snippet.test.mjs  preview-template.test.mjs  process-subscription-period-end.test.mjs  (+34 more)
chrome-extension/: README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: senders_integration.rs  smoke.rs  sponsors_integration.rs
dashboard-ui/: .env.example  .env.production  eslint.config.js  index.html  lighthouserc.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-plugin-brand-html.ts  vite.config.ts  vitest.config.ts
docs/: api-key-management.md  content-curation.md  dlq-simplification-summary.md  edit-profile-api.md  enhanced-drag-drop-implementation.md  eventbridge-monitoring.md  geolocation-database-updates.md  github-api-cutover-spec.md  lambda-authorizer.md  logging-cleanup.md  passwordless-auth-setup.md  reusable-content-components.md  send-test-email.md  sender-email-deployment-summary.md  sender-email-deployment.md  sender-email-environment-config.md  sender-email-monitoring.md  test-coverage-summary.md
events/: subscribe.md  tenant-onboarding.md
functions/: add-subscriber.mjs  add-update-tenant.mjs  aggregate-issue-analytics.mjs  backfill-stats-gsi.mjs  build-monthly-report-data.mjs  build-report-data.mjs  build-report-email.mjs  calculate-pricing.mjs  compile-monthly-report.mjs  compile-report.mjs  delete-campaign-link.mjs  delete-expired-draft.mjs  evaluate-ab-winner.mjs  export-contacts.mjs  generate-monthly-insights.mjs  generate-outreach.mjs  get-campaign-link-analytics.mjs  get-campaign-link.mjs  get-campaign-links-analytics.mjs  get-dashboard-data.mjs  get-insights.mjs  get-markdown-links.mjs  get-next-issue-date.mjs  get-top-link.mjs  handle-email-status.mjs  handle-log-batch.mjs  handle-log-subscription.mjs  identify-new-issue.mjs  import-issue-from-github.mjs  migrate-contacts-to-dynamodb.mjs  mint-campaign-link.mjs  monthly-report-job.mjs  open-tracking.mjs  parse-issue.mjs  parse-json-issue.mjs  parse-md-to-json.mjs  process-campaign-click.mjs  process-link-click.mjs  (+16 more)
functions/admin-rust/: Cargo.toml
functions/admin-rust/check-brand-id/: Cargo.toml
functions/admin-rust/check-brand-id/src/: main.rs
functions/admin-rust/manage-api-keys/: Cargo.toml
functions/admin-rust/manage-api-keys/src/: main.rs
functions/admin-rust/shared/src/: aws_clients.rs  dynamodb_utils.rs  lib.rs
functions/admin/add-user-to-group/: Cargo.toml
functions/admin/add-user-to-group/src/: main.rs
functions/admin/get-profile/: Cargo.toml
functions/admin/get-profile/src/: main.rs
functions/admin/shared/: Cargo.toml
functions/admin/shared/proptest-regressions/: auth.txt
functions/admin/shared/src/: auth.rs  dynamodb_utils.rs  error.rs  response.rs
functions/admin/unsubscribe-log-processor/: Cargo.toml
functions/admin/unsubscribe-log-processor/src/: main.rs
functions/admin/update-brand/: Cargo.toml
functions/admin/update-brand/src/: main.rs
functions/admin/update-profile/: Cargo.toml
functions/admin/update-profile/src/: main.rs
functions/admin/upload-brand-photo/: Cargo.toml
functions/admin/upload-brand-photo/src/: main.rs
functions/ai/generate-insights/: Cargo.toml
functions/ai/generate-insights/src/: main.rs
functions/ai/generate-social-post/: Cargo.toml
functions/ai/generate-social-post/src/: main.rs
functions/ai/shared/: Cargo.toml
functions/ai/shared/src/: bedrock.rs  lib.rs  models.rs  tools.rs
functions/auth-rust/cognito-post-confirmation/: Cargo.toml
functions/auth-rust/cognito-pre-token-generation/: Cargo.toml
functions/auth-rust/cognito-pre-token-generation/src/: main.rs
functions/auth-rust/lambda-authorizer/: Cargo.toml
functions/auth-rust/lambda-authorizer/src/: main.rs
functions/senders/bootstrap-verification-template/: Cargo.toml
functions/senders/check-sender-status-automatically/: Cargo.toml
functions/senders/check-sender-status-automatically/src/: main.rs
functions/senders/create-sender/: Cargo.toml
functions/senders/create-sender/src/: main.rs
functions/senders/delete-sender/: Cargo.toml
functions/senders/delete-sender/src/: main.rs
functions/senders/get-domain-verification/: Cargo.toml
functions/senders/get-domain-verification/src/: main.rs
functions/senders/get-senders/: Cargo.toml
functions/senders/get-senders/src/: main.rs
functions/senders/shared/: Cargo.toml
functions/senders/shared/src/: auth.rs  response.rs  validation.rs
functions/senders/update-sender/: Cargo.toml
functions/senders/update-sender/src/: main.rs
functions/senders/verify-domain/: Cargo.toml
functions/senders/verify-domain/src/: main.rs
(+932 files in other folders)
