[workspace]
resolver = "2"
members = [
    "functions/admin/get-profile",
    "functions/admin/update-profile",
    "functions/admin/manage-api-keys",
    "functions/admin/check-brand-id",
    "functions/admin/update-brand",
    "functions/admin/upload-brand-photo",
    "functions/admin/add-user-to-group",
    "functions/admin/unsubscribe-log-processor",
    "functions/admin/shared",
    "functions/auth-rust/cognito-post-confirmation",
    "functions/auth-rust/cognito-pre-token-generation",
    "functions/auth-rust/lambda-authorizer",
    "functions/ai/generate-insights",
    "functions/ai/generate-social-post",
    "functions/ai/shared",
    "functions/senders/shared",
    "functions/senders/create-sender",
    "functions/senders/delete-sender",
    "functions/senders/get-senders",
    "functions/senders/update-sender",
    "functions/senders/get-sender-status",
    "functions/senders/verify-domain",
    "functions/senders/get-domain-verification",
    "functions/senders/check-sender-status-automatically",
    "functions/senders/bootstrap-verification-template",
    "crates/integration-tests"
]

[workspace.dependencies]
lambda_runtime = "0.13"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-s3 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-sesv2 = "1"
aws-sdk-eventbridge = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-scheduler = "1"
aws-smithy-types = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
proptest = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde_dynamo = "4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
