[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

[lib]
path = "functions/src/shared/lib.rs"

[dependencies]
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-cloudwatchlogs = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-scheduler = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
aws-smithy-types = { workspace = true }
aws_lambda_events = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
aws_lambda_events = { workspace = true }
proptest = { workspace = true }
serial_test = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[[bin]]
name = "add-user-to-group"
path = "functions/src/admin/add-user-to-group.rs"

[[bin]]
name = "api-router"
path = "functions/src/api/main.rs"

[[bin]]
name = "unsubscribe-log-processor"
path = "functions/src/admin/unsubscribe-log-processor.rs"

[[bin]]
name = "cognito-post-confirmation"
path = "functions/src/auth/cognito-post-confirmation.rs"

[[bin]]
name = "cognito-pre-token-generation"
path = "functions/src/auth/cognito-pre-token-generation.rs"

[[bin]]
name = "lambda-authorizer"
path = "functions/src/auth/lambda-authorizer.rs"

[[bin]]
name = "generate-insights"
path = "functions/src/ai/generate-insights.rs"

[[bin]]
name = "generate-social-post"
path = "functions/src/ai/generate-social-post.rs"

[[bin]]
name = "bootstrap-verification-template"
path = "functions/src/senders/bootstrap-verification-template.rs"

[[bin]]
name = "check-sender-status-automatically"
path = "functions/src/senders/check-sender-status-automatically.rs"

[workspace]
resolver = "2"
members = [
    "crates/integration-tests"
]

[workspace.dependencies]
lambda_runtime = "0.13"
lambda_http = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-s3 = "1"
aws-sdk-cloudwatchlogs = "1"
aws-sdk-sesv2 = "1"
aws-sdk-eventbridge = "1"
aws-sdk-bedrockruntime = "1"
aws-sdk-scheduler = "1"
aws-smithy-types = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
proptest = "1"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde_dynamo = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
aws_lambda_events = "0.15"
jsonwebtoken = "9"
serial_test = "3"
