[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-sesv2 = "1"
aws-sdk-scheduler = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
