[package]
name = "add-user-to-group"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
