[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-cognitoidentityprovider = { workspace = true }
aws-sdk-s3 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
aws_lambda_events = "0.15"
