[package]
name = "unsubscribe-log-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
aws-config = { workspace = true }
aws-sdk-cloudwatchlogs = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
regex = { workspace = true }
