[package]
name = "upload-brand-photo"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
