[package]
name = "generate-social-post"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
ai-shared = { path = "../shared" }

[[bin]]
name = "generate-social-post"
path = "src/main.rs"
