[package]
name = "ai-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { workspace = true }
aws-sdk-bedrockruntime = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-smithy-types = "1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = "1"

[dev-dependencies]
proptest = "1"
serial_test = "3"
