[package]
name = "lambda-authorizer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1"
aws-sdk-dynamodb = "1"
aws_lambda_events = "0.15"
base64 = "0.22"
chrono = { version = "0.4", features = ["std", "clock"] }
hex = "0.4"
jsonwebtoken = "9"
lambda_runtime = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
serde_json = "1"
