[package]
name = "bootstrap-verification-template"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-config = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
reqwest = { workspace = true }
senders-shared = { path = "../shared" }
