[package]
name = "create-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
senders-shared = { path = "../shared" }
lambda_runtime = { workspace = true }
lambda_http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
aws-sdk-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

[dev-dependencies]
proptest = { workspace = true }
