[package]
name = "senders-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sesv2 = { workspace = true }
aws-sdk-scheduler = "1"
aws-config = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
lambda_http = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
