[package]
name = "update-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", package = "senders-shared" }
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
chrono = { workspace = true }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
